package com.Mabes.datatamu.activities;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.Mabes.datatamu.R;

public class Tata_Tertib extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_tata__tertib);
    }
}